# SiliconMonitor

./: .gitignore  AI_INTEGRATION.md  BUILD.md  CHANGELOG.md  CLA.md  CLI.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  test_new_fields.rs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
.github/workflows/: build-and-push.yml  ci.yml
benches/: cpu_stats.rs  gpu_query.rs  process_enum.rs
docs/: UTILITIES.md
docs/images/: README.md
examples/: agent_backends.rs  agent_demo.rs  agent_simple.rs  ai_api_demo.rs  ai_chatbot_test.rs  ai_workload_monitor.rs  all_gpus.rs  amd_monitor.rs  apple_monitor.rs  audio_monitor.rs  backend_discovery.rs  bandwidth_test.rs  basic.rs  bluetooth_monitor.rs  boot_config.rs  config_demo.rs  consent_demo.rs  cpu_monitor.rs  cpufreq.rs  disk_monitor.rs  display_monitor.rs  fan_control.rs  fan_monitor.rs  gpu_control.rs  gpu_temperature_thresholds.rs  gui.rs  hardware_control.rs  health_check.rs  hwmon.rs  intel_monitor.rs  memory_management.rs  monitoring.rs  motherboard_monitor.rs  network_monitor.rs  network_tools.rs  nvidia_monitor.rs  ollama_example.rs  power_supply.rs  process_control.rs  process_engine.rs  (+9 more)
grafana/: README.md  fleet-overview.json  gpu-detail.json  host-detail.json
src/: anomaly.rs  backend.rs  bandwidth.rs  connections.rs  consent.rs  cpufreq.rs  daemon.rs  error.rs  fan_control.rs  fleet.rs  http_server.rs  lib.rs  network_monitor.rs  network_tools.rs  pcie.rs  power_supply.rs  predictive.rs  process_monitor.rs  process_tree.rs  prometheus.rs  sandbox.rs  services.rs  system_stats.rs  wsl.rs
src/agent/: backend.rs  engine.rs  mod.rs  state.rs
src/agent/local/: ollama.rs
src/ai_api/: formats.rs  mcp_server.rs  mod.rs  ontology.rs  tools.rs  types.rs
src/audio/: mod.rs
src/battery/: mod.rs
src/bluetooth/: mod.rs
src/camera/: mod.rs
src/cgroup_monitor/: mod.rs
src/codec/: mod.rs
src/core/: cpu.rs  engine.rs  memory.rs  platform_info.rs  power.rs  process.rs  temperature.rs
src/cpu_cache/: mod.rs
src/cpu_microarch/: mod.rs
src/crypto_accel/: mod.rs
src/datacenter/: chassis.rs  ipmi.rs  mod.rs  rack.rs
src/disk/: linux.rs  macos.rs  traits.rs  windows.rs
src/display/: mod.rs
src/dma_engine/: mod.rs
src/drm_monitor/: mod.rs
src/edac/: mod.rs
src/firmware/: mod.rs
src/gpu/: amd.rs  amd_rocm.rs  intel.rs  intel_levelzero.rs  mod.rs  nvidia.rs  traits.rs  windows_helpers.rs
src/gpu_topology/: mod.rs
src/gui/: app.rs  theme.rs  widgets.rs
src/hardware_ai/: mod.rs
src/hwmon/: windows.rs
src/input/: mod.rs
src/interconnect/: mod.rs
src/interrupt_map/: mod.rs
src/io_scheduler/: mod.rs
src/iommu/: mod.rs
src/kernel_params/: mod.rs
src/memory_bandwidth/: mod.rs
src/memory_topology/: mod.rs
src/motherboard/: linux.rs  macos.rs  mod.rs
src/numa/: mod.rs
src/observability/: api.rs  context.rs  events.rs  metrics.rs  mod.rs  permissions.rs  server.rs  streaming.rs
src/os_info/: mod.rs
src/pci_devices/: mod.rs
src/platform/: windows.rs
src/power_profile/: mod.rs
src/printer/: mod.rs
src/rapl/: mod.rs
src/scheduler/: mod.rs
src/security_mitigations/: mod.rs
src/sensors/: mod.rs
src/silicon/: apple.rs  linux.rs  windows.rs
src/smart/: mod.rs
src/storage_controller/: mod.rs
src/thermal_zone/: mod.rs
src/tpm/: mod.rs
src/tsdb/: mod.rs
src/tui/: app.rs  mod.rs  ui.rs
src/usb/: mod.rs
src/virtualization/: containers.rs  detect.rs  guest.rs  mod.rs
src/voltage_regulator/: mod.rs
src/watchdog/: mod.rs
